--- a/src/app/views/navbar/navbar.component.html
+++ b/src/app/views/navbar/navbar.component.html
@@ -1,1 +1,12 @@
-<p>navbar works!</p>
+<p>This is Navbar</p>
+
+<section>
+    <mat-form-field appearance="outline">
+      <mat-label>Selected Framwork</mat-label>
+      <mat-select [formControl]="selectedFW">
+        <mat-option *ngFor="let framwork of frameworks" [value]="frameworks">
+        {{ framwork }}
+       </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </section>
